--- a/hello-lang-chain/pyproject.toml
+++ b/hello-lang-chain/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "langchain>=1.0",
+    "langchain-anthropic>=1.3.0",
     "langchain-openai",
 ]
