Refactor main.py and enhance documentation
- Cleaned up whitespace in main.py for improved readability.
- Updated docstrings for the calculate and get_weather functions to enhance clarity.
- Added a new dependency group for development in pyproject.toml, including "black" for code formatting.
- Updated uv.lock to reflect the addition of new development dependencies.

--- a/hello-lang-chain/pyproject.toml
+++ b/hello-lang-chain/pyproject.toml
@@ -9,3 +9,8 @@ dependencies = [
     "langchain-anthropic>=1.3.0",
     "langchain-openai",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.12.0",
+]
