--- a/hello-lang-graph-2/pyproject.toml
+++ b/hello-lang-graph-2/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "langchain-core>=1.2.6",
+    "langgraph>=1.0.5",
+]
