--- a/hello-lang-graph-2/pyproject.toml
+++ b/hello-lang-graph-2/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "langchain-core>=1.2.6",
+    "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
 ]
