--- a/hello-lang-graph-2/pyproject.toml
+++ b/hello-lang-graph-2/pyproject.toml
@@ -9,3 +9,8 @@ dependencies = [
     "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
+]
