--- a/chat-backend/pyproject.toml
+++ b/chat-backend/pyproject.toml
@@ -6,4 +6,5 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.128.0",
+    "pydantic-settings>=2.0.0",
 ]
